<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <Spinner
        android:id="@+id/type_property_spinner"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
        android:entries="@array/type_array"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Spinner
        android:id="@+id/status_property_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
        android:entries="@array/status_array"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/type_property_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/price_property"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/price"
        app:layout_constraintTop_toBottomOf="@+id/status_property_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/price_property_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/surface_property"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/surface"
        app:layout_constraintTop_toBottomOf="@+id/price_property"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/surface_property_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/rooms_property"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/rooms"
        app:layout_constraintTop_toBottomOf="@+id/surface_property"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rooms_property_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/address_number"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/number"
        app:layout_constraintTop_toBottomOf="@+id/rooms_property"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address_number_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/address_street"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/street"
        app:layout_constraintTop_toBottomOf="@+id/rooms_property"
        app:layout_constraintStart_toEndOf="@id/address_number"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address_street_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/address_postCode"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/postalCode"
        app:layout_constraintTop_toBottomOf="@+id/address_street"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address_postCode_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/address_city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/city"
        app:layout_constraintTop_toBottomOf="@+id/address_street"
        app:layout_constraintStart_toEndOf="@id/address_postCode"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address_city_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/describe_property"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/describe"
        app:layout_constraintTop_toBottomOf="@+id/address_city"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/describe_property_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="5"
            android:gravity="start"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/agent_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/agentName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/describe_property">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/agent_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <org.imaginativeworld.whynotimagecarousel.ImageCarousel
        android:id="@+id/carousel"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:imageScaleType="fitCenter"
        app:scalingFactor="0.50"
        app:showTopShadow="false"
        app:carouselType="SHOWCASE"
        app:carouselGravity="CENTER"
        app:scaleOnScroll="true"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/agent_name" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_add_photo"
        android:text="@string/takepic"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/carousel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/add_pic_gallery"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_pic_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_add_photos_gallery"
        android:text="@string/fromgallery"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/carousel"
        app:layout_constraintStart_toEndOf="@id/add_picture"
        app:layout_constraintEnd_toEndOf="parent"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_property"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_add"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/add_restaurant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <CheckBox
        android:id="@+id/add_health"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/health"
        app:layout_constraintTop_toBottomOf="@id/add_pic_gallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/add_school"/>
    <CheckBox
        android:id="@+id/add_school"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/school"
        app:layout_constraintTop_toBottomOf="@id/add_pic_gallery"
        app:layout_constraintStart_toEndOf="@id/add_health"
        app:layout_constraintEnd_toStartOf="@+id/add_market"/>
    <CheckBox
        android:id="@+id/add_market"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/market"
        app:layout_constraintTop_toBottomOf="@id/add_pic_gallery"
        app:layout_constraintStart_toEndOf="@id/add_school"
        app:layout_constraintEnd_toEndOf="parent"/>
    <CheckBox
        android:id="@+id/add_transports"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/transports"
        app:layout_constraintTop_toBottomOf="@id/add_market"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/add_restaurant"/>
    <CheckBox
        android:id="@+id/add_restaurant"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/restaurant"
        app:layout_constraintTop_toBottomOf="@id/add_market"
        app:layout_constraintStart_toEndOf="@id/add_transports"
        app:layout_constraintEnd_toStartOf="@id/add_park"/>
    <CheckBox
        android:id="@+id/add_park"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/park"
        app:layout_constraintTop_toBottomOf="@id/add_market"
        app:layout_constraintStart_toEndOf="@id/add_restaurant"
        app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <org.imaginativeworld.whynotimagecarousel.ImageCarousel
        android:id="@+id/carouselFullscreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:imageScaleType="fitCenter"
        app:scalingFactor="0.50"
        app:showTopShadow="false"
        app:carouselType="BLOCK"
        app:carouselGravity="CENTER"
        app:scaleOnScroll="true"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</RelativeLayout>